--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.3",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.11",
     "clsx": "^2.0.0",
     "lucide-react": "^0.376.0",
     "next": "^14.0.4",
